@@ -1,5 +1,8 @@
 2009-03-06  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* setup.cc (Setup::publishMessageInput,
+	Setup::publishMessageOutput): Added.
+
 	* Makefile.am: Link shared library against MPI.
 
 	* music/port.hh, port.cc: Bugfixed error reporting.
